# uber-microservice-go

./: .gitignore  Makefile  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
pkg/config/: BUILD.bazel
pkg/di/: BUILD.bazel
pkg/grpc/interceptor/: BUILD.bazel
pkg/http/middleware/: BUILD.bazel
pkg/logger/: BUILD.bazel  logger.go
service/ride/controller/: BUILD.bazel  controller.go
service/ride/entity/: BUILD.bazel  entity.go
service/ride/gateway/payment/: BUILD.bazel
service/ride/gateway/payment/stripe/: BUILD.bazel  stripe.go
service/ride/handler/: BUILD.bazel  handler.go
service/ride/repository/: BUILD.bazel  repository.go
service/user/controller/: BUILD.bazel  controller.go
service/user/entity/: BUILD.bazel
service/user/gateway/email/: BUILD.bazel  email.go
service/user/gateway/email/gomail/: BUILD.bazel  gomail.go
service/user/handler/: BUILD.bazel  handler.go
service/user/repository/: BUILD.bazel  repository.go
