load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["repository.go"],
    importpath = "github.com/example/project/service/user/repository",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/gocql/gocql:go_default_library"],
)
